--- a/src/blocks/menu/menu.css
+++ b/src/blocks/menu/menu.css
@@ -1,6 +1,5 @@
-.header__menu {
-  grid-area: header__menu;
-  margin: 50px 4%;
+.menu {
+  margin: 50px 0;
   font-size: 24px;
   font-style: normal;
   font-weight: 300;
@@ -8,7 +7,7 @@
 }
 
 @media screen and (max-width: 990px) {
-  .header__menu {
+  .menu {
     font-size: 18px;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -16,7 +15,7 @@
 }
 
 @media screen and (max-width: 660px) {
-  .header__menu {
+  .menu {
     display: none;
     justify-self: start;
     margin-top: 0;
