--- a/src/blocks/section/__title/section__title.css
+++ b/src/blocks/section/__title/section__title.css
@@ -1,4 +1,4 @@
-.section-title {
+.section__title {
   font-size: 26px;
   font-style: normal;
   font-weight: 300;
@@ -8,13 +8,13 @@
 }
 
 @media screen and (max-width: 990px) {
-  .section-title {
+  .section__title {
     font-size: 24px;
   }
 }
 
 @media screen and (max-width: 700px) {
-  .section-title {
+  .section__title {
     font-size: 20px;
   }
 }
