fix: change indents in work-format for anchor

--- a/src/blocks/section/_focused/section_focused.css
+++ b/src/blocks/section/_focused/section_focused.css
@@ -1,3 +1,9 @@
 .section_focused {
   padding-top: 50px;
 }
+
+@media screen and (max-width: 1050px) {
+  .section_focused {
+    padding-top: 100px;
+  }
+}
