feat: customize menu functionality

--- a/src/blocks/work-format/__list/_focused/work-format__list_focused.css
+++ b/src/blocks/work-format/__list/_focused/work-format__list_focused.css
@@ -1,3 +1,9 @@
 .work-format__list_focused {
   margin-top: 100px;
 }
+
+@media screen and (max-width: 660px) {
+  .work-format__list_focused {
+    margin-top: 50px;
+  }
+}
