--- a/src/index.css
+++ b/src/index.css
@@ -88,3 +88,9 @@
 @import url(./blocks/footer/__license/footer__license.css);
 @import url(./blocks/footer/__link/footer__link.css);
 
+@import url(./blocks/popup/popup.css);
+@import url(./blocks/popup/__diploma/popup__diploma.css);
+@import url(./blocks/popup/__image/popup__image.css);
+@import url(./blocks/popup/_background/popup_background_opacity.css);
+@import url(./blocks/popup/_opened/popup_opened.css);
+@import url(./blocks/button-close/button-close.css);
