feat: add hendler and validation for form

--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,9 @@
 @import url(./blocks/form/__input-radio/form__input-radio.css);
 @import url(./blocks/form/__input-checkbox/form__input-checkbox.css);
 @import url(./blocks/form/__button/form__button.css);
+@import url(./blocks/form/__input-error/form__input-error.css);
+@import url(./blocks/form/__input-error/_active/form__input-error_active.css);
+@import url(./blocks/form/__button/_disabled/form__button_disabled.css);
 
 @import url(./blocks/contacts/contacts.css);
 @import url(./blocks/contacts/__list/contacts__list.css);
