feat: set up routes

--- a/src/index.css
+++ b/src/index.css
@@ -80,6 +80,7 @@
 @import url(./blocks/form/__input-error/form__input-error.css);
 @import url(./blocks/form/__input-error/_active/form__input-error_active.css);
 @import url(./blocks/form/__button/_disabled/form__button_disabled.css);
+@import url(./blocks/link/_place_form/link_place_form.css);
 
 @import url(./blocks/contacts/contacts.css);
 @import url(./blocks/contacts/__list/contacts__list.css);
