--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -5,20 +5,15 @@
   grid-template-areas: 'about-me__description about-me__photo';
 }
 
-.about-me__button {
-  margin-top: 35px;
-  margin-bottom: 30px;
-  align-self: center;
-}
-
 .about-me__description {
-  margin: 90px 35px 0 8%;
+  margin: 90px 35px 30px 8%;
   font-size: 18px;
   font-style: normal;
   font-weight: 300;
   line-height: 1.3;
   display: flex;
   flex-direction: column;
+  row-gap: 30px;
   grid-area: about-me__description;
 }
 
@@ -34,13 +29,17 @@
   margin: 0;
 }
 
-.about-me__text:not(:first-child) {
-  margin-top: 30px;
+.about-me__link {
+  width: 245px;
 }
 
 @media screen and (max-width: 990px) {
   .about-me__photo {
     margin-right: 0;
+  }
+
+  .about-me__link {
+    width: 200px;
   }
 
   .about-me__description {
@@ -74,6 +73,10 @@
 
   .about-me__photo {
     justify-self: center;
+  }
+
+  .about-me__link {
+    align-self: center;
   }
 }
 
