--- a/src/components/Appointment/Appointment.css
+++ b/src/components/Appointment/Appointment.css
@@ -3,3 +3,8 @@
   display: flex;
   flex-direction: column;
 }
+
+.appointment__link-to-calendar {
+  text-align: center;
+  margin-bottom: 20px;
+}
