--- a/src/components/Day/Day.css
+++ b/src/components/Day/Day.css
@@ -1,5 +1,5 @@
 .cell {
-  width: 70px;
+  width: 100%;
   height: 70px;
 }
 
@@ -28,4 +28,24 @@
 .cell__day_disabled:hover {
   cursor: default;
   background-color: #151740;
+}
+
+@media screen and (max-width: 570px) {
+  .cell {
+    height: 50px;
+  }
+
+  .cell__day {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .cell {
+    height: 40px;
+  }
+
+  .cell__day {
+    font-size: 14px;
+  }
 }
