--- a/src/components/Month/Month.css
+++ b/src/components/Month/Month.css
@@ -2,13 +2,14 @@
   padding: 0;
   margin: 0;
   list-style-type: none;
-  display: flex;
+  display: grid;
+  grid-template-columns: repeat(7, 70px);
   font-size: 20px;
   text-align: right;
 }
 
 .month__day-of-week {
-  width: 70px;
+  width: 100%;
   box-sizing: border-box;
   padding: 0 10px 10px 0;
 }
@@ -18,9 +19,31 @@
   margin: 0;
   list-style-type: none;
   display: grid;
-  grid-template-columns: repeat(7, 1fr);
+  grid-template-columns: repeat(7, 70px);
 }
 
 .month_hidden {
   display: none;
+}
+
+@media screen and (max-width: 570px) {
+  .month__days-of-week-list {
+    font-size: 16px;
+    grid-template-columns: repeat(7, 50px);
+  }
+
+  .month__days {
+    grid-template-columns: repeat(7, 50px);
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .month__days-of-week-list {
+    font-size: 14px;
+    grid-template-columns: repeat(7, 40px);
+  }
+
+  .month__days {
+    grid-template-columns: repeat(7, 40px);
+  }
 }
