--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -75,6 +75,10 @@
   grid-area: header__title;
 }
 
+.header__title {
+  cursor: pointer;
+}
+
 @media screen and (max-width: 990px) {
   .header__contact {
     font-size: 22px;
